laying out the framework

--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 <body>
     <header></header>
 
-    <div class="hi">
-        Hi.
+    <section class="section1">
+    <div class="intro">
+        Hi, I'm <span>JOHNNY</span>.
     </div>
-
     <div class="info">
         <img src="images/tempportrait.png" class="portrait">
     </div>
+    </section>
+
 </body>
 </html>
