--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>My Portfolio</title>
 </head>
 <body>
@@ -13,7 +14,7 @@
 
     <section class="section1">
     <div class="intro">
-        Hi, I'm <span>JOHNNY</span>.
+        <h1 class="animate__animated animate__fadeInDown animate__delay-1s">Hi, I'm <span>JOHNNY</span>.</h1>
     </div>
     <div class="info">
         <img src="images/tempportrait.png" class="portrait">
