--- a/index.html
+++ b/index.html
@@ -5,21 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <title>My Portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+    <title>Personal Portfolio ACA</title>
 </head>
 <body>
-    <header></header>
+    <div class="index">
+        <nav>
+            <img src="images/jclogo.png" class="JCLogo" alt ="Austin Coding Academy Logo">
+            <ul>
+                <li><a href="#">RESUME</a></li>
+                <li><a href="#">ABOUT ME</a></li>
+                <li><a href="https://medium.com/@johnnyculbreth " target="_blank">MY BLOG</a></li>
+                <li><a href="#">CONTACT ME</a></li>
+            </ul>
+        </nav>
+        <div class="detail">
+            <h1>JOHNNY <span>CULBRETH</span></h1>
+            <p>Student of Web Development</p>
 
-    <section class="section1">
-    <div class="intro">
-        <h1 class="animate__animated animate__fadeInDown animate__delay-1s">Hi, I'm <span>JOHNNY</span>.</h1>
+        <div class="images">
+            <img src="images/shape.png" class="shape">
+            <img src="images/tempportrait.png" class="portrait">
+        </div>
+        </div>
     </div>
-    <div class="info">
-        <img src="images/tempportrait.png" class="portrait">
-    </div>
-    </section>
-
 </body>
 </html>
