--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <p>Student of Web Development</p>
 
         <div class="images">
-            <img src="images/shape.png" class="shape">
+            <img src="images/shape2.png" class="shape">
             <img src="images/tempportrait.png" class="portrait">
         </div>
         </div>
