--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
-    <title>Personal Portfolio ACA</title>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+
+    <title>My Portfolio</title>
 </head>
 <body>
     <div class="index">
@@ -22,7 +24,7 @@
         </nav>
         <div class="detail">
             <h1>JOHNNY <span>CULBRETH</span></h1>
-            <p>Student of Web Development</p>
+            <p>WEB DEVELOPER</p>
 
         <div class="images">
             <img src="images/shape2.png" class="shape">
