started about page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
             <img src="images/jclogo.png" class="JCLogo" alt ="Austin Coding Academy Logo">
             <ul>
-                <li><a href="#">ABOUT ME</a></li>
+                <li><a href="../aboutme/index.html">ABOUT ME</a></li>
                 <li><a href="#">RESUME</a></li>
                 <li><a href="#">MY PROJECTS</a></li>
                 <li><a href="https://medium.com/@johnnyculbreth " target="_blank">MY BLOG</a></li>
