added css animation

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
     <title>My Portfolio</title>
 </head>
@@ -23,7 +24,7 @@
             </ul>
         </nav>
         <div class="detail">
-            <h1>JOHNNY <span>CULBRETH</span></h1>
+            <h1 class="animate__animated animate__fadeInUpBig">JOHNNY <span>CULBRETH</span></h1>
             <p>WEB DEVELOPER</p>
 
         <div class="images">
