--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="#">RESUME</a></li>
                 <li><a href="#">MY PROJECTS</a></li>
                 <li><a href="https://medium.com/@johnnyculbreth " target="_blank">MY BLOG</a></li>
-                <li><a href="#">CONTACT ME</a></li>
+                <li><a href="../contactme/index.html">CONTACT ME</a></li>
             </ul>
         </nav>
         <div class="detail">
