--- a/contactme/index.html
+++ b/contactme/index.html
@@ -9,6 +9,17 @@
     <title>Contact Page</title>
 </head>
 <body>
+    <nav>
+        <img src="../images/jclogowhite.png" class="JCLogo" alt ="JC Logo">
+        <ul>
+            <li><a href="../index.html">HOME</a></li>
+            <li><a href="../aboutme/index.html">ABOUT ME</a></li>
+            <li><a href="#">RESUME</a></li>
+            <li><a href="#">MY PROJECTS</a></li>
+            <li><a href="https://medium.com/@johnnyculbreth " target="_blank">MY BLOG</a></li>
+        </ul>
+    </nav>
+
     <h1>LET'S WORK TOGETHER!</h1>
 
     <form action="https://formspree.io/f/xeqnyevr" method="post">
