--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -9,6 +9,17 @@
     <title>About Me</title>
 </head>
 <body>
+    <nav>
+        <img src="../images/jclogowhite.png" class="JCLogo" alt ="JC Logo">
+        <ul>
+            <li><a href="../index.html">HOME</a></li>
+            <li><a href="#">RESUME</a></li>
+            <li><a href="#">MY PROJECTS</a></li>
+            <li><a href="https://medium.com/@johnnyculbreth " target="_blank">MY BLOG</a></li>
+            <li><a href="../contactme/index.html">CONTACT ME</a></li>
+        </ul>
+    </nav>
+
     <section class="about">
         <div class="content">
             <img src="../images/aboutme2.JPG" class="about-pic">
