--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="index">
         <nav>
-            <img src="images/jclogo.png" class="JCLogo" alt ="Austin Coding Academy Logo">
+            <img src="images/jclogo.png" class="JCLogo" alt ="JC Logo">
             <ul>
                 <li><a href="aboutme/index.html">ABOUT ME</a></li>
                 <li><a href="#">RESUME</a></li>
