working on projects page

--- a/myprojects/index.html
+++ b/myprojects/index.html
@@ -19,5 +19,43 @@
             <li><a href="../contactme/index.html">CONTACT ME</a></li>
         </ul>
     </nav>
+
+    <div class="center">
+        <section class="my-project">
+            <img src="../images/salonproject.png" class="project-image">
+            <div class="content">
+                <h1>LOREM IPSUM SALON</h1>
+            <p>An Austin Coding Academy checkpoint project - I had a lot of fun building this website for the fictional Hair Salon, Lorem Ipsum. Using skills I learned in the early part of the WEB101 course, I was about to build a Landing Page as well as an About, Gallery, Blog and Contact pages.</p>
+            <div class ="buttons">
+                <a href="https://github.com/JohnnyCulbreth/hairSalonWebsite"><button type="button">VIEW CODE</button></a>
+                <a href="https://johnnyculbreth.github.io/hairSalonWebsite/"><button type="button">VIEW LIVE</button></a>
+            </div>
+            </div>
+        </section>
+    
+        <section class="my-project">
+            <img src="../images/teslaproject.png" class="project-image">
+            <div class="content">
+                <h1>TESLA RESPONSIVE SITE</h1>
+            <p>Another early Austin Coding Academy WEB101 Project, this Tesla product page was a fun build. We were challenged to put recently-taught "responsive" skills to the test to make a business page that was compatable with multiple devices. I thought the pseudo-selectors on the images added a little spice.</p>
+            <div class ="buttons">
+                <a href="https://github.com/JohnnyCulbreth/First-Responsive-Website"><button type="button">VIEW CODE</button></a>
+                <a href="https://johnnyculbreth.github.io/First-Responsive-Website/"><button type="button">VIEW LIVE</button></a>
+            </div>
+            </div>
+        </section>
+    
+        <section class="my-project">
+            <img src="../images/nasaproject.png" class="project-image">
+            <div class="content">
+                <h1>NASA CONTACT PAGE</h1>
+            <p>A quick, ACA WEB101 Class Project that challenged me to create a "Contact Page" for NASA. I was given a wireframe to replicate and style with recently-taught CSS skills. Easy but fun - I look forward to more challenges like this!</p>
+            <div class ="buttons">
+                <a href="https://github.com/JohnnyCulbreth/NASAContactPage"><button type="button">VIEW CODE</button></a>
+                <a href="https://johnnyculbreth.github.io/NASAContactPage/"><button type="button">VIEW LIVE</button></a>
+            </div>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
