--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -14,7 +14,7 @@
         <ul>
             <li><a href="../index.html">HOME</a></li>
             <li><a href="#">RESUME</a></li>
-            <li><a href="#">MY PROJECTS</a></li>
+            <li><a href="../myprojects/index.html">MY PROJECTS</a></li>
             <li><a href="https://medium.com/@johnnyculbreth " target="_blank">MY BLOG</a></li>
             <li><a href="../contactme/index.html">CONTACT ME</a></li>
         </ul>
