--- a/contactme/index.html
+++ b/contactme/index.html
@@ -15,7 +15,7 @@
             <li><a href="../index.html">HOME</a></li>
             <li><a href="../aboutme/index.html">ABOUT ME</a></li>
             <li><a href="#">RESUME</a></li>
-            <li><a href="#">MY PROJECTS</a></li>
+            <li><a href="../myprojects/index.html">MY PROJECTS</a></li>
             <li><a href="https://medium.com/@johnnyculbreth " target="_blank">MY BLOG</a></li>
         </ul>
     </nav>
