--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href="aboutme/index.html">ABOUT ME</a></li>
                 <li><a href="#">RESUME</a></li>
-                <li><a href="#">MY PROJECTS</a></li>
+                <li><a href="myprojects/index.html">MY PROJECTS</a></li>
                 <li><a href="https://medium.com/@johnnyculbreth " target="_blank">MY BLOG</a></li>
                 <li><a href="contactme/index.html">CONTACT ME</a></li>
             </ul>
