--- a/myprojects/index.html
+++ b/myprojects/index.html
@@ -47,13 +47,13 @@
         </section>
     
         <section class="my-project">
-            <img src="../images/nasaproject.png" class="project-image">
+            <img src="../images/resumeproject.png" class="project-image">
             <div class="content">
-                <h1>NASA CONTACT PAGE</h1>
-            <p>A quick, ACA WEB101 Class Project that challenged me to create a "Contact Page" for NASA. I was given a wireframe to replicate and style with recently-taught CSS skills. Easy but fun - I look forward to more challenges like this!</p>
+                <h1>RESUME PROJECT</h1>
+            <p>A quick, ACA WEB101 Class Project that challenged me to build a "Resume". I channeled one of my favorite anti-hero television characters of all time, Walter White. I thought the sky-blue header and the “wanted sketch” as a headshot were a nice touch. Easy but fun - I look forward to more challenges like this!</p>
             <div class ="buttons">
-                <a href="https://github.com/JohnnyCulbreth/NASAContactPage"><button type="button">VIEW CODE</button></a>
-                <a href="https://johnnyculbreth.github.io/NASAContactPage/"><button type="button">VIEW LIVE</button></a>
+                <a href="https://github.com/JohnnyCulbreth/ACA_web101_johnny_culbreth/tree/main/resume"><button type="button">VIEW CODE</button></a>
+                <a href="https://johnnyculbreth.github.io/ACA_web101_johnny_culbreth/resume/index.html"><button type="button">VIEW LIVE</button></a>
             </div>
             </div>
         </section>
