--- a/resume/index.html
+++ b/resume/index.html
@@ -13,7 +13,7 @@
         <img src="../images/jclogowhite.png" class="JCLogo" alt ="JC Logo">
         <ul>
             <li><a href="../index.html">HOME</a></li>
-            <li><a href="#">RESUME</a></li>
+            <li><a href="../aboutme/index.html">ABOUT ME</a></li>
             <li><a href="../myprojects/index.html">MY PROJECTS</a></li>
             <li><a href="https://medium.com/@johnnyculbreth " target="_blank">MY BLOG</a></li>
             <li><a href="../contactme/index.html">CONTACT ME</a></li>
