added resume link to all navs

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <img src="images/jclogo.png" class="JCLogo" alt ="JC Logo">
             <ul>
                 <li><a href="aboutme/index.html">ABOUT ME</a></li>
-                <li><a href="#">RESUME</a></li>
+                <li><a href="resume/index.html">RESUME</a></li>
                 <li><a href="myprojects/index.html">MY PROJECTS</a></li>
                 <li><a href="https://medium.com/@johnnyculbreth " target="_blank">MY BLOG</a></li>
                 <li><a href="contactme/index.html">CONTACT ME</a></li>
