--- a/myprojects/index.html
+++ b/myprojects/index.html
@@ -15,7 +15,7 @@
         <ul>
             <li><a href="../index.html">HOME</a></li>
             <li><a href="../aboutme/index.html">ABOUT ME</a></li>
-            <li><a href="#">RESUME</a></li>
+            <li><a href="../resume/index.html">RESUME</a></li>
             <li><a href="https://medium.com/@johnnyculbreth " target="_blank">MY BLOG</a></li>
             <li><a href="../contactme/index.html">CONTACT ME</a></li>
         </ul>
