--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>My Portfolio</title>
 </head>
 <body>
+<div class="wrapper">
     <div class="index">
         <nav>
             <img src="images/jclogo.png" class="JCLogo" alt ="JC Logo">
@@ -33,5 +34,6 @@
         </div>
         </div>
     </div>
+</div>
 </body>
 </html>
