--- a/myprojects/index.html
+++ b/myprojects/index.html
@@ -10,6 +10,7 @@
     <title>My Projects</title>
 </head>
 <body>
+<div class="wrapper">
     <nav>
         <img src="../images/jclogowhite.png" class="JCLogo" alt ="JC Logo">
         <ul>
@@ -58,5 +59,6 @@
             </div>
         </section>
     </div>
+</div>
 </body>
 </html>
