added wrapper div for responsive purposes

--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -9,6 +9,7 @@
     <title>About Me</title>
 </head>
 <body>
+<div class="wrapper">
     <nav>
         <img src="../images/jclogowhite.png" class="JCLogo" alt ="JC Logo">
         <ul>
@@ -31,5 +32,6 @@
             </div>
         </div>
     </section>
+</div>
 </body>
 </html>
