--- a/contactme/index.html
+++ b/contactme/index.html
@@ -9,6 +9,7 @@
     <title>Contact Page</title>
 </head>
 <body>
+<div class="wrapper">
     <nav>
         <img src="../images/jclogowhite.png" class="JCLogo" alt ="JC Logo">
         <ul>
@@ -58,5 +59,6 @@
             <button class="button" type="submit">SEND</button> 
         </label>    
     </form>
+</div>
 </body>
 </html>
