--- a/resume/index.html
+++ b/resume/index.html
@@ -9,6 +9,7 @@
     <title>Resume</title>
 </head>
 <body>
+<div class="wrapper">
     <nav>
         <img src="../images/jclogowhite.png" class="JCLogo" alt ="JC Logo">
         <ul>
@@ -19,5 +20,6 @@
             <li><a href="../contactme/index.html">CONTACT ME</a></li>
         </ul>
     </nav>
+</div>
 </body>
 </html>
