added temporary about me text

--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -26,8 +26,9 @@
             <img src="../images/aboutme2.JPG" class="about-pic">
             <div class="text">
                 <h1>ABOUT ME</h1>
-                <h5>Web Developer</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis aliquam sit amet nunc in porta. Fusce cursus erat in arcu faucibus, sed accumsan ec tincidunt. Suspendisse faucibus finibus lacus vitae rutrum. Sed cursus bibendum purus a rutrum. Integer maximus quis nulla at venenatis. Curabitur vel odio a justo aliquam consectetur et in orci. Pellentesque sollicitudin lobortis sapien vel molestie. Aenean sagittis nibh eget metus fermentum semper. Vivamus laoreet urna ante, et pharetra tortor lacinia nec.</p>
+                <p>I'm a retired professional cyclist that spent most of my teens-twenties traveling the US and beyond. While competing on an international level, my niche of cycling came with injuries and they did come aplenty. One thing I learned about myself while rehabbing and getting healthy was that I had a deep interest in creating websites—websites for anything I may have been interested in at the time. But, it wasn’t until recently that I decided that this was something I wanted to do for a career.
+                <br>
+                I have a strong interest in ______, _______ and _______. I am both driven and self-motivated, and I am constantly experimenting with new technologies and techniques. I am very passionate about Web Development, and strive to better myself as a developer, and the development community as a whole.</p>
                 <a href="../contactme/index.html"><button type="button">Contact Me</button></a>
             </div>
         </div>
