--- a/resume/index.html
+++ b/resume/index.html
@@ -20,6 +20,15 @@
             <li><a href="../contactme/index.html">CONTACT ME</a></li>
         </ul>
     </nav>
+    <div class="index">
+        <div class="linkedin">
+            <img src="../images/linkedin.png" class="qr-image" alt="LinkedIn QR Code">
+        </div>
+        <div class="linkedin">
+            <h1>SCAN TO VIEW MY</h1>
+            <a href="https://www.linkedin.com/in/johnnyculbreth/" target="blank"><img src="../images/linkedinlogo.png" class ="linkedin-image" alt="LinkedIn Logo" onmouseover="this.src='../images/linkedinlogoorange.png';" onmouseout="this.src='../images/linkedinlogo.png';"></a>
+        </div>
+    </div>
 </div>
 </body>
 </html>
