added click here img

--- a/resume/index.html
+++ b/resume/index.html
@@ -26,7 +26,8 @@
         </div>
         <div class="linkedin">
             <h1>SCAN TO VIEW MY</h1>
-            <a href="https://www.linkedin.com/in/johnnyculbreth/" target="blank"><img src="../images/linkedinlogo.png" class ="linkedin-image" alt="LinkedIn Logo" onmouseover="this.src='../images/linkedinlogoorange.png';" onmouseout="this.src='../images/linkedinlogo.png';"></a>
+            <a href="https://www.linkedin.com/in/johnnyculbreth/" target="blank"><img src="../images/linkedinlogoorange.png" class ="linkedin-image" alt="LinkedIn Logo" onmouseover="this.src='../images/linkedinlogo.png';" onmouseout="this.src='../images/linkedinlogoorange.png';"></a> <br>
+            <img src="../images/clickhere.png" class="click-here" alt="Click Here logo">
         </div>
     </div>
 </div>
