about me text edit

--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -28,7 +28,7 @@
                 <h1>ABOUT ME</h1>
                 <p>I'm a retired professional cyclist that spent most of my teens-twenties traveling the US and beyond. While competing on an international level, my niche of cycling came with injuries and they did come aplenty. One thing I learned about myself while rehabbing and getting healthy was that I had a deep interest in creating websites—websites for anything I may have been interested in at the time. But, it wasn’t until recently that I decided that this was something I wanted to do for a career.
                 <br>
-                I have a strong interest in ______, _______ and _______. I am both driven and self-motivated, and I am constantly experimenting with new technologies and techniques. I am very passionate about Web Development, and strive to better myself as a developer, and the development community as a whole.</p>
+                I have a strong interest in ______, _______ and ______. I am both driven and self-motivated, and I am constantly experimenting with new technologies and techniques. I am very passionate about Web Development, and strive to better myself as a developer, and the development community as a whole.</p>
                 <a href="../contactme/index.html"><button type="button">Contact Me</button></a>
             </div>
         </div>
