added about me text

--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -26,7 +26,9 @@
             <img src="../images/aboutme2.JPG" class="about-pic">
             <div class="text">
                 <h1>ABOUT ME</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec finibus tortor ut pulvinar vehicula. Fusce aliquet vel nibh vitae fermentum. Aliquam posuere nisl vel tortor consectetur tincidunt. Sed cursus tristique leo ac tempor. Fusce ultrices nulla at ligula hendrerit mattis. Donec in est a urna fermentum auctor ut porta enim. Aenean iaculis justo rhoncus, vulputate nibh a, vehicula velit. Proin at mauris in nisi accumsan ornare. Integer eget dolor orci. Mauris luctus auctor porta. Etiam in eros sit amet ipsum efficitur finibus. Donec pulvinar dapibus quam convallis tincidunt. Mauris tristique, libero accumsan tincidunt porta, lacus turpis eleifend mauris, at consequat.</p>
+                <p>Retired professional cyclist that spent most of my teens-twenties traveling the US and beyond. While competing on an international level, my niche of cycling came with injuries and they did come aplenty. One thing I learned about myself while rehabbing and getting healthy was that I had a deep interest in creating websites—websites for anything I may have been interested in at the time. But, it wasn’t until recently that I decided that this was something I wanted to do for a career.
+
+                I have a strong interest in ______, _______ and _______. I am both driven and self-motivated, and I am constantly experimenting with new technologies and techniques. I am very passionate about Web Development, and strive to better myself as a developer, and the development community as a whole.</p>
                 <a href="../contactme/index.html"><button type="button">Contact Me</button></a>
             </div>
         </div>
