--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -26,9 +26,9 @@
             <img src="../images/aboutme2.JPG" class="about-pic">
             <div class="text">
                 <h1>ABOUT ME</h1>
-                <p>Retired professional cyclist that spent most of my teens-twenties traveling the US and beyond. While competing on an international level, my niche of cycling came with injuries and they did come aplenty. One thing I learned about myself while rehabbing and getting healthy was that I had a deep interest in creating websites—websites for anything I may have been interested in at the time. But, it wasn’t until recently that I decided that this was something I wanted to do for a career.
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sed justo risus. Nam in risus orci. Proin pharetra feugiat odio sit amet varius. Proin non elementum mi. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aenean ultrices purus eget varius lobortis. Donec tincidunt bibendum libero.
                 <br>
-                I have a strong interest in ______, _______ and _______. I am both driven and self-motivated, and I am constantly experimenting with new technologies and techniques. I am very passionate about Web Development, and strive to better myself as a developer, and the development community as a whole.</p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sed justo risus. Nam in risus orci. Proin pharetra feugiat odio sit amet varius. Proin non elementum mi. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aenean ultrices purus eget varius lobortis. Donec tincidunt bibendum libero.</p>
                 <a href="../contactme/index.html"><button type="button">Contact Me</button></a>
             </div>
         </div>
